--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </div>
         </div>
         <div class="introImage">
-          <img src="images/teamwork.png" alt="">
+          <img src="images/teamwork.webp" alt="">
         </div>
       </section>
       <section class="about" id='about'>
@@ -101,42 +101,42 @@
         <h2>Our <span class="sectionSpan">Products</span></h2>
         <div class="prod">
           <div class="prodImg">
-            <img src="images/dashboard.png" alt="">
+            <img src="images/dashboard.jpg" alt="">
           </div>
           <div class="prodDes">
             <div class="prodDesCont">
             <h3>Aliquet lectus, proin nibh nisl, condimentum.</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
             <a href="#">Learn more -></a>
-            <img src="images/talking-men-ii.png" alt="">
+            <img src="images/talking-men-ii.webp" alt="">
           </div>
         </div>
       </div>
 
         <div class="prod">
           <div class="prodImg">
-            <img src="images/product-i.png" alt="">
+            <img src="images/product-i.webp" alt="">
           </div>
           <div class="prodDes">
             <div class="prodDesCont">
             <h3>Aliquet lectus, proin nibh nisl, condimentum.</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
             <a href="#">Learn more -></a>
-            <img src="images/talking-men-i.png" alt="">
+            <img src="images/talking-men-i.webp" alt="">
           </div>
         </div>
         </div>
 
         <div class="prod">
           <div class="prodImg">
-            <img src="images/product-ii.png" alt="">
+            <img src="images/product-ii.jpg" alt="">
           </div>
           <div class="prodDes">
             <div class="prodDesCont">
             <h3>Aliquet lectus, proin nibh nisl, condimentum.</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
             <a href="#">Learn more -></a>
-            <img src="images/talking-people-iv.png" alt="">
+            <img src="images/talking-people-iv.webp" alt="">
           </div>
         </div>
         </div>
@@ -150,7 +150,7 @@
             <h3>Aliquet lectus, proin nibh nisl, condimentum.</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
             <a href="#">Learn more -></a>
-            <img src="images/talking-girls-iii.png" alt="">
+            <img src="images/talking-girls-iii.webp" alt="">
           </div>
         </div>
         </div>
