Create Hero Content

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 <section class="home">
   <nav>
-    <div class="logo"><span>Bioflex</span><span class="blue dot"><i class="fas fa-circle"></i></span></div>
+    <div class="logo"><span>Bioflex</span><span class="blue dot"><i class="font fas fa-circle"></i></span></div>
     <div class="side-nav-bar hide" id="side-nav-bar">
-      <div class="nav-header"><span class="blue">NAVIGATION</span><i class="fad fa-times" onclick="toggleVissibility()"></i></div>
+      <div class="nav-header"><span class="blue">NAVIGATION</span><i class="font fad fa-times" onclick="toggleVissibility()"></i></div>
       <div class="nav-links">
         <a href="#">Home</a>
         <a href="#">About</a>
@@ -34,6 +34,29 @@
     </div>
     <div class="menu-button" onclick="toggleVissibility()"><span class="menu-text blue">MENU</span><i class="fad fa-bars"></i></div>
   </nav>
+
+  <!-- <div class="flex-test"> -->
+  <div class="home-content">
+    <h1>WELCOME TO BIOFLEX</h1>
+    <div class="home-message">
+      <p>We are a mission focused company dedicated
+        to working for the common good and building great
+        software.
+      </p>
+      <div class="home-social">
+        <i class="font fab fa-facebook-f"></i>
+        <i class="font fab fa-linkedin-in"></i>
+        <i class="font fab fa-twitter"></i>
+        <i class="font fab fa-youtube"></i>
+        <i class="font fas fa-envelope"></i>
+      </div>
+    </div>
+    <div class="home-buttons">
+      <a href="#">WE ARE HIRING</a>
+      <a href="#">MORE ABOUT US</a>
+    </div>
+  </div>
+<!-- </div> -->
 </section>
   <script src="js/scripts.js"></script>  
 </body>
