Create Hero Content - Nav moved out of home section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Bioflex</title>
 </head>
 <body>
-<section class="home">
+
   <nav>
     <div class="logo"><span>Bioflex</span><span class="blue dot"><i class="font fas fa-circle"></i></span></div>
     <div class="side-nav-bar hide" id="side-nav-bar">
@@ -35,6 +35,9 @@
     <div class="menu-button" onclick="toggleVissibility()"><span class="menu-text blue">MENU</span><i class="fad fa-bars"></i></div>
   </nav>
 
+<section class="home">
+
+
   <!-- <div class="flex-test"> -->
   <div class="home-content">
     <h1>WELCOME TO BIOFLEX</h1>
@@ -57,6 +60,9 @@
     </div>
   </div>
 <!-- </div> -->
+    <div class="scroll-down">
+
+    </div>
 </section>
   <script src="js/scripts.js"></script>  
 </body>
